<resources>
  <string name="app_name">TOASTER</string>
  <string name="text_home">HOME</string>
  <string name="text_clip">CLIP</string>
  <string name="text_timer">TIMER</string>
  <string name="text_my">MY</string>
  <string name="text_placeholder">placeholder</string>
  <string name="menu_edit">편집</string>

  <string name="text_all">전체</string>

  <!-- login -->
  <string name="login_description">더 이상 링크를 태우지 마세요\n토스트 먹듯이 간편하게,</string>
  <string name="login_with_kakao">카카오 계정으로 시작하기</string>

  <!-- onboarding -->
  <string name="onboarding_first_1">복사한 링크</string>
  <string name="onboarding_first_2">를</string>
  <string name="onboarding_first_3">손쉽게 저장하고</string>
  <string name="onboarding_second_1">타이머</string>
  <string name="onboarding_second_2">를 설정하고</string>
  <string name="onboarding_second_3">링크를</string>
  <string name="onboarding_second_4">리마인드</string>
  <string name="onboarding_second_5">받아요</string>
  <string name="onboarding_third_1">나의</string>
  <string name="onboarding_third_2">링크 열람 현황</string>
  <string name="onboarding_third_3">까지</string>
  <string name="onboarding_third_4">한 눈에!</string>
  <string name="onboarding_fourth_1">더 이상 링크를 태우지 마세요</string>
  <string name="onboarding_fourth_2">토스트 먹듯이 간편하게,</string>

  <!-- mypage -->
  <string name="mypage_link_number_now">지금까지 읽은 링크 수</string>
  <string name="mypage_number">개</string>
  <string name="mypage_this_week_read_link">이번주 열람한 링크</string>
  <string name="mypage_this_week_save_link">이번주 저장한 링크</string>
  <string name="mypage_please_wait">아직 마이페이지는 추가 공사 중!\n 업데이트를 기다려주세요 :)</string>
  <string name="mypage_nn">nn</string>
  <string name="mypage_nim">님이</string>
  <string name="mypage_name_ex">홍길동</string>

  <!-- timer -->
  <string name="timer_title">TIMER</string>
  <string name="timer_permission_off">알림 설정이 꺼져 있어요</string>
  <string name="timer_to_use_timer">타이머 기능을 이용하시려면</string>
  <string name="timer_setting_notification">기기 설정 > 알림</string>
  <string name="timer_turn_on_permission">에서 알림을 켜주세요.</string>
  <string name="timer_set_timer">타이머를 설정하고\n원하는 때에 링크를 받아보세요</string>
  <string name="timer_set_btn">타이머 설정하기</string>
  <string name="timer_set">타이머 설정</string>
  <string name="timer_read">읽으러가기</string>
  <string name="timer_link">링크들을</string>
  <string name="timer_good">읽기 딱 좋은 시간이에요!</string>
  <string name="timer_wait">타이머 대기 중..</string>
  <string name="timer_not_complete">타이머가 완료되면 리마인드 드릴게요</string>
  <string name="timer_complete">완료된 타이머</string>
  <string name="timer_dialog_noti_permission">알림이 꺼져있어요!</string>
  <string name="timer_noti_permission_ment">기기 알림이 꺼져있으면\n타이머 기능을 이용할 수 없어요</string>
  <string name="timer_dialog_permission">기기에서 알림 설정하기</string>
  <string name="timer_remind_at">에 리마인드 해드릴게요</string>
  <string name="timer_set_repeat">반복 주기를 정해주세요</string>
  <string name="timer_repeat">반복</string>
  <string name="timer_none_noti_ment">* 알림 설정이 꺼져있을 시 타이머 기능이 제한돼요</string>
  <string name="timer_set_disable_now">지금은 설정할 수 없어요</string>
  <string name="timer_diable_noti_ment">기기 알림이 꺼져있으면\n토스터의 타이머 기능을 이용할 수 없어요</string>
  <string name="timer_permission_restore_ment">기존에 설정한 타이머들은 알림을 키면\n다시 복구돼요</string>
  <string name="timer_ex_complete_count">0</string>
  <string name="timer_choose_clip">알림 받을 클립 선택</string>
  <string name="timer_set_repeat_word">반복 설정</string>

  <!-- settings -->
  <string name="settings_title">설정</string>
  <string name="user_nim">님</string>
  <string name="settings_ex_email">pcu2083@naver.com</string>
  <string name="settings_alert_off">알림 설정을 끄면 타이머 기능을 이용할 수 없어요</string>
  <string name="settings_withdraw">탈퇴하기</string>
  <string name="settings_logout">로그아웃</string>
  <string name="settings_term">이용약관</string>
  <string name="settings_question">1:1 문의</string>
  <string name="settings_alert">알림 설정</string>

  <!-- edit clip -->
  <string name="edit_clip_guide_msg">클립을 누른 뒤 위아래로 드래그하여 순서를 수정하세요!</string>
  <string name="edit_clip_minus_description">클립을 삭제하려면 누르세요</string>
  <string name="edit_clip_fix_description">고정된 클립입니다</string>
  <string name="edit_clip_edit_description">클립을 수정하려면 누르세요</string>
  <string name="edit_clip_edit_title">클립 이름 수정</string>
  <string name="edit_clip_delete_dialog_title">클립을 삭제하시겠어요?</string>
  <string name="edit_clip_delete_dialog_subtitle">지금까지 저장된 모든 링크가 사라져요</string>
  <string name="edit_clip_delete_dialog_delete">삭제</string>
  <string name="string.negative_close_msg">닫기</string>

  <!-- modify timer -->
  <string name="modify_timer_mod">타이머 수정하기</string>
  <string name="modify_timer_delete">삭제</string>
  <string name="modify_timer_title">수정하기</string>

  <!-- clip -->
  <string name="clip_search">검색어를 입력하세요</string>
  <string name="clip_add_clip">클립 추가</string>
  <string name="clip_all">전체 클립</string>
  <string name="clip_empty">클립을 추가해\n링크를 정리해보세요!</string>
  <string name="clip_toolbar_edit">편집</string>
  <string name="clip_toolbar_all_clip">전체 클립</string>
  <string name="clip_new_clip_info">클립의 이름을 입력해주세요</string>
  <string name="clip_enter_search_word">검색어를 입력해주세요</string>
  <string name="clip_ex_clip_num">(n)</string>
  <string name="clip_edit_clip">CLIP 편집</string>
  <string name="clip_all_clip">전체 클립</string>
  <string name="clip_entire_clip">전체</string>
  <string name="clip_read_link">열람</string>
  <string name="clip_unread_link">미열람</string>
  <string name="clip_ex_num_count">n개</string>
  <string name="clip_text_clip">clip</string>
  <string name="clip_already_read">열람</string>
  <string name="clip_text_title">Title</string>
  <string name="clip_ex_url">https://~~</string>

  <!-- clip link-->
  <string name="clip_link_read">열람</string>
  <string name="clip_link_unread">미열람</string>
  <string name="clip_link_empty">아직 클립에 저장된 링크가 없어요\n아래 + 버튼을 통해 링크를 저장해보세요!</string>
  <string name="clip_link_empty_description">저장된 링크가 없습니다</string>
  <string name="clip_link_back_description">뒤로 가기</string>
  <string name="clip_link_bottom_sheet_title">수정하기</string>
  <string name="clip_link_bottom_sheet_delete">삭제</string>
  <string name="clip_link_bottom_sheet_modify">제목 편집</string>
  <string name="clip_link_bottom_sheet_modify_title">링크 제목 편집</string>
  <string name="clip_link_bottom_sheet_modify_body">링크를 입력해 주세요</string>


  <string name="search_result_ex_url">https://example.com</string>
  <string name="search_result_detail_clip_name">세부 클립명</string>
  <string name="search_result_clip_num">개</string>
  <string name="search_none_results">검색결과가 없어요.\n다른 검색어로 찾아보실래요?</string>
  <string name="search_clip_title">클립명</string>
  <string name="search_clip_amount_n">n</string>
  <string name="search_clip_amount_nn">nn</string>


  <!-- home -->
  <string name="home_correction_clip">클립 수정</string>
  <string name="home_add_clip">클립 추가</string>
  <string name="home_new_clip_info">"새로운 클립의 이름을 입력해주세요"</string>
  <string name="home_error_clip_info">클립의 이름은 최대 15자까지 입력 가능해요</string>
  <string name="home_enter_search_word">검색어를 입력해주세요</string>
  <string name="home_ex_user_name">홍길동</string>
  <string name="home_name_nim">님</string>
  <string name="home_with_toaster">토스터로</string>
  <string name="home_link_count"> 0개의 링크</string>
  <string name="home_collect_stamps">를</string>
  <string name="home_unforget_read">잊지 않고 읽었어요!</string>
  <string name="home_toast_progress_link">nn</string>
  <string name="home_all_toast_ex_num">/nn</string>
  <string name="home_user_clip">님의 클립</string>
  <string name="home_this_week_link">이주의 링크</string>
  <string name="home_this_week_recommend">이주의 추천 사이트</string>
  <string name="home_survey_title">1분 설문조사 참여하고\n스타벅스 기프티콘 받기</string>
  <string name="home_survey_subtitle">토스터 사용 피드백을 남겨주시면\n추첨을 통해 기프티콘을 드려요!</string>
  <string name="home_survey_button">참여하기</string>
  <string name="home_survey_skip"><u>일주일간 보지 않기</u></string>


  <!-- error -->
  <string name="error_clip_length">클립의 이름은 최대 15자까지 입력 가능해요</string>
  <string name="error_clip_name">이미 같은 이름의 클립이 있어요</string>

  <!-- dialog intro -->
  <string name="save_clip_dialog_title">링크 저장을 취소하시겠어요?</string>
  <string name="save_clip_dialog_sub_title">저장 중인 링크가 사라져요</string>
  <string name="clipboard_dialog_title">토스터에 링크 저장하기</string>
  <string name="clipboard_dialog_sub_title">붙여 넣기 동작을 허용하시겠어요?</string>
  <string name="timer_delete_dialog_title">타이머를 삭제하시겠어요?</string>
  <string name="timer_delete_dialog_sub_title">더 이상 해당 클립의 리마인드를 받을 수 없어요.</string>
  <string name="timer_cancel_dialog_title">타이머 만들기를 취소할까요?</string>
  <string name="timer_cancel_dialog_sub_title">지금까지 진행한 타이머 설정이 사라져요</string>
  <string name="setting_withdraw_dialog_title">정말로 탈퇴하시겠어요?</string>
  <string name="setting_withdraw_dialog_sub_title">회원 탈퇴 시 지금까지\n저장한 모든 링크가 사라져요.</string>
  <string name="positive_ok_save">저장</string>
  <string name="negative_close_cancel">취소</string>
  <string name="positive_ok_msg">확인</string>
  <string name="negative_close_msg">닫기</string>
  <string name="positive_delete">삭제할래요</string>
  <string name="negative_withdraw">네, 탈퇴할래요</string>
  <string name="positive_withdraw">더 써볼래요</string>


  <!-- save link -->
  <string name="savelink_save_link">링크 저장</string>
  <string name="savelink_enter_link">링크를 입력해주세요</string>
  <string name="savelink_link_error">유효하지 않은 형식의 링크입니다..</string>
  <string name="savelink_text_savelink_en">save link</string>
  <string name="savelink_check_clip">클립을 선택해주세요</string>
  <string name="savelink_choose_clip">알림 받을 클립 선택</string>

  <!-- share -->
  <string name="share_dialog_title">로그인이 필요한 서비스예요</string>
  <string name="share_dialog_subtitle">로그인 세션이 만료되었거나 서비스 가입이 필요해요. 앱으로 이동하시겠어요?</string>
  <string name="share_dialog_positive">확인</string>
  <string name="share_dialog_negative">취소</string>

</resources>
