<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginHorizontal="30dp"
  android:background="@drawable/shape_white_fill_12_rect">

  <TextView
    android:id="@+id/tv_survey_dialog_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="20dp"
    android:text="@string/home_survey_title"
    android:textAppearance="@style/Typography.suit.bold_20"
    android:textColor="@color/neutrals800"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_survey_dialog_subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:text="@string/home_survey_subtitle"
    android:textAppearance="@style/Typography.suit.regular_16_128"
    android:textColor="@color/neutrals800"
    app:layout_constraintStart_toStartOf="@id/tv_survey_dialog_title"
    app:layout_constraintTop_toBottomOf="@id/tv_survey_dialog_title" />

  <ImageView
    android:id="@+id/iv_survey_dialog_close"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="21dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="10dp"
    android:padding="12dp"
    android:src="@drawable/ic_close_24"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/tv_survey_dialog_subtitle"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/iv_survey_dialog"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="18dp"
    android:adjustViewBounds="true"
    android:src="@drawable/img_notification_permission"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_survey_dialog_subtitle" />

  <TextView
    android:id="@+id/btn_survey_dialog"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="18dp"
    android:layout_marginBottom="24dp"
    android:background="@drawable/shape_primary_fill_8_rect"
    android:gravity="center"
    android:paddingVertical="14dp"
    android:text="@string/home_survey_button"
    android:textAppearance="@style/Typography.suit.bold_16"
    android:textColor="@color/neutrals_white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iv_survey_dialog" />

  <TextView
    android:id="@+id/btn_survey_dialog_skip"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="24dp"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:text="@string/home_survey_skip"
    android:textAppearance="@style/Typography.suit.regular_14"
    android:textColor="@color/neutrals800"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_survey_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>
