<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="org.sopt.mypage.settings.SettingsFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_settings_title"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:id="@+id/iv_settings_left"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:padding="3dp"
      android:src="@drawable/ic_arrow_left_24"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/tv_settings_title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/tv_settings_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="18dp"
      android:padding="3dp"
      android:text="@string/settings_title"
      android:textAppearance="@style/Typography.suit.bold_18"
      android:textColor="@color/neutrals900"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@id/iv_settings_left"
      app:layout_constraintTop_toTopOf="parent" />

    <ImageView
      android:id="@+id/iv_settings_close"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:padding="5dp"
      android:src="@drawable/ic_close_20"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <FrameLayout
    android:id="@+id/fl_settings_alert_off"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cl_settings_title">

    <TextView
      android:id="@+id/tv_settings_alert_off"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="12dp"
      android:background="@drawable/shape_neutrals050_fill_12_rect"
      android:gravity="center"
      android:padding="12dp"
      android:text="@string/settings_alert_off"
      android:textColor="@color/neutrals400" />
  </FrameLayout>


  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_user_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/fl_settings_alert_off">

    <TextView
      android:id="@+id/tv_user_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="22dp"
      android:text="홍길동"
      android:textAppearance="@style/Typography.suit.bold_18"
      android:textColor="@color/neutrals900"
      app:layout_constraintBaseline_toBaselineOf="@id/tv_user_name_nim"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/tv_user_name_nim"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="22dp"
      android:layout_marginBottom="22dp"
      android:text="@string/user_nim"
      android:textAppearance="@style/Typography.suit.medium_18"
      android:textColor="@color/neutrals900"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@id/tv_user_name"
      app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <View
    android:id="@+id/v_settings_1"
    android:layout_width="match_parent"
    android:layout_height="4dp"
    android:background="@color/neutrals050"
    app:layout_constraintTop_toBottomOf="@id/cl_user_info" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_settings_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="@id/v_settings_1">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/cl_setting_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:id="@+id/tv_set_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/settings_alert"
        android:textAppearance="@style/Typography.suit.medium_18"
        android:textColor="@color/neutrals900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <designsystem.components.toggle.ToasterToggle
        android:id="@+id/settings_alert_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_set_alert"
        app:layout_constraintTop_toTopOf="parent" />

      <View
        android:id="@+id/tg_push_allowed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/settings_alert_toggle"
        app:layout_constraintEnd_toEndOf="@id/settings_alert_toggle"
        app:layout_constraintStart_toStartOf="@id/settings_alert_toggle"
        app:layout_constraintTop_toTopOf="@id/settings_alert_toggle" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/cl_setting_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cl_setting_1">

      <TextView
        android:id="@+id/tv_set_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/settings_question"
        android:textAppearance="@style/Typography.suit.medium_18"
        android:textColor="@color/neutrals900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/cl_setting_3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cl_setting_2">

      <TextView
        android:id="@+id/tv_set_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/settings_term"
        android:textAppearance="@style/Typography.suit.medium_18"
        android:textColor="@color/neutrals900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/cl_setting_4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cl_setting_3">

      <TextView
        android:id="@+id/tv_set_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/settings_logout"
        android:textAppearance="@style/Typography.suit.medium_18"
        android:textColor="@color/neutrals900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


  </androidx.constraintlayout.widget.ConstraintLayout>

  <View
    android:id="@+id/v_settings_2"
    android:layout_width="match_parent"
    android:layout_height="4dp"
    android:background="@color/neutrals050"
    app:layout_constraintTop_toBottomOf="@id/cl_settings_list" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_setting_5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/v_settings_2">

    <TextView
      android:id="@+id/tv_withdraw"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginVertical="24dp"
      android:layout_marginStart="20dp"
      android:text="@string/settings_withdraw"
      android:textAppearance="@style/Typography.suit.medium_16"
      android:textColor="@color/neutrals400"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
